--- a/Drumbkit/styles.css
+++ b/Drumbkit/styles.css
@@ -1,3 +1,10 @@
+html {
+  font-size: 10px;
+  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background-size: cover;
+}
+
+
 
 
 .key {
