--- a/Drumbkit/styles.css
+++ b/Drumbkit/styles.css
@@ -4,6 +4,19 @@ html {
   background-size: cover;
 }
 
+body,html {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+.keys {
+  display: flex;
+  flex: 1;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
 
 
 
