--- a/Drumbkit/styles.css
+++ b/Drumbkit/styles.css
@@ -18,6 +18,20 @@ body,html {
   justify-content: center;
 }
 
+.key {
+  border: .4rem solid black;
+  border-radius: .5rem;
+  margin: 1rem;
+  font-size: 1.5rem;
+  padding: 1rem .5rem;
+  transition: all .07s ease;
+  width: 10rem;
+  text-align: center;
+  color: white;
+  background: rgba(0,0,0,0.4);
+  text-shadow: 0 0 .5rem black;
+}
+
 
 
 .key {
