adding styles to css

--- a/Drumbkit/styles.css
+++ b/Drumbkit/styles.css
@@ -32,6 +32,12 @@ body,html {
   text-shadow: 0 0 .5rem black;
 }
 
+.playing {
+  transform: scale(1.1);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
+}
+
 
 
 .key {
