--- a/FlexPanels/styles.css
+++ b/FlexPanels/styles.css
@@ -12,5 +12,8 @@
 	box-shadow:inset 0 0 0 5px rgba(255, 295, 0, 53);
 	color: white;
 	text-align: center;
-	
+	align-items: center;
+	transform: 
+	font-sie 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+	fl
 }
