--- a/AjaxTypeAhead/styles.css
+++ b/AjaxTypeAhead/styles.css
@@ -5,3 +5,17 @@ html {
   font-size: 20px;
   font-weight: 200;
 }
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+input {
+  width: 100%;
+  padding: 20px;
+}
+
+.search-form {
+  max-width: 400px;
+  margin: 50px auto;
+}
