--- a/AjaxTypeAhead/styles.css
+++ b/AjaxTypeAhead/styles.css
@@ -64,3 +64,11 @@ input.search {
   transform: perspective(100px) rotateX(-3deg) translateY(3px);
   background: linear-gradient(to top,  #ffffff 0%,#EFEFEF 100%);
 }
+
+span.population {
+  font-size: 15px;
+}
+
+.hl {
+  background: #ffc600;
+}
