--- a/AStudyGuide.css
+++ b/AStudyGuide.css
@@ -10,30 +10,40 @@
   grid-row: 1;
   flex: 1;
   width: 32%;
+  display: flex;
+  justify-content: space-between;
 }
 .two { 
   grid-column: 2;
   grid-row: 1;
   flex: 1;
   width: 32%;
+  display: flex;
+  justify-content: space-between;
 }
 .three {
   grid-column: 3;
   grid-row: 1;
   flex: 1;
   width: 32%;
+  display: flex;
+  justify-content: space-between;
 }
 .four {
   grid-column: 1;
   grid-row: 2;
   flex: 1;
   width: 32%;
+  display: flex;
+  justify-content: space-between;
 }
 .five {
   grid-column: 1;
   grid-row: 2;
   flex: 1;
   width: 32%;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media (max-width: 400px) {
